--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -26,6 +26,8 @@ dependencies:
   firebase_auth: ^5.4.2
   crypto: ^3.0.6
   cloud_firestore: ^5.6.4
+  flutter_local_notifications: ^18.0.1
+  timezone: ^0.10.0
 
 
   
