--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,6 +28,7 @@ dependencies:
   cloud_firestore: ^5.6.4
   flutter_local_notifications: ^18.0.1
   timezone: ^0.10.0
+  firebase_remote_config: ^5.4.1
 
 
   
