--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -10,12 +10,23 @@
    <uses-permission android:name="android.permission.VIBRATE"/>
    <uses-permission android:name="android.permission.USE_EXACT_ALARM"/>
    <uses-permission android:name="android.permission.USE_FULL_SCREEN_INTENT" />
+   <uses-permission android:name="android.permission.INTERNET" />
+
+    <uses-permission android:name="android.permission.FOREGROUND_SERVICE_DATA_SYNC" />
+    <uses-permission android:name="android.permission.FOREGROUND_SERVICE_SPECIAL_USE" />
       
     
-    <application
-        android:label="TravelGuard"
-        android:name="${applicationName}"
-        android:icon="@mipmap/ic_launcher">
+  <application
+    android:label="TravelGuard"
+    android:name="${applicationName}"
+    android:icon="@mipmap/ic_launcher">
+
+    <service
+        android:name="flutter_background.service.BackgroundService"
+        android:foregroundServiceType="mediaProjection"/>
+        
+  </application>
+
         <activity
             android:name=".MainActivity"
             android:exported="true"
