--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,6 +30,8 @@ dependencies:
   timezone: ^0.10.0
   firebase_remote_config: ^5.4.1
   cyrtranslit: ^1.0.1
+  internet_connection_checker_plus: ^2.7.0
+
 
 
   
