--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,6 +31,8 @@ dependencies:
   firebase_remote_config: ^5.4.1
   cyrtranslit: ^1.0.1
   internet_connection_checker_plus: ^2.7.0
+  image_picker: ^1.1.2
+  http: ^1.3.0
 
 
 
